--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,4 +1,6 @@
  @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 
  .login-page {
 
@@ -19,8 +21,8 @@
  }
 
  .login-page h2 {
-     font-family: "Montserrat", sans-serif;
-     font-size: 50px;
+     font-family: "Great Vibes", cursive;
+     font-size: 100px;
  }
 
  .login-page fieldset {
