--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -44,12 +44,14 @@
             max-height: 200px;
             max-width: 200px;
             margin: 0 auto;
+            display: flex;
+            justify-content: center;
 
             img {
+                max-height: 200px;
                 max-width: 100%;
-                max-height: 100%;
                 background-color: white;
-                object-fit: contain;
+                object-fit: cover;
             }
         }
 
