complete view detail page - modal gallery - add skeleton loader - design footer

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -4,6 +4,14 @@
         flex-wrap: wrap;
         gap: 20px 10px; //gap 10px, có 5 items trên 1 row => 4*10 = 40px cần được bớt ở width. 40/5items = 8px => calc trừ đi 8px
 
+        .thumbnail {
+            max-height: 139.73px !important;
+
+            img {
+                object-fit: contain !important;
+            }
+        }
+
         .column {
             width: calc(20% - 8px);
 
