--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,6 +19,7 @@
                     height: 50px;
                     width: 50px;
                     margin-right: 10px;
+                    object-fit: contain;
                 }
 
                 .price {
