--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -5,15 +5,25 @@
     margin: 0;
 }
 
-body {
-    overflow-x: hidden;
-}
 
 body,
 html {
-    height: 100%;
+    // overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
+// body,
+// html {
+//     min-height: 100vh;
+//     height: auto;
+// }
+
 #root {
-    height: 100%;
+    height: auto;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
